--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: 'NotoSansKR-Regular';
+  src: url('./fonts/NotoSansKR-Regular.otf');
+}
+@font-face {
+  font-family: 'NotoSansKR-Medium';
+  src: url('./fonts/NotoSansKR-Medium.otf');
+}
+@font-face {
+  font-family: 'NotoSansKR-Bold';
+  src: url('./fonts/NotoSansKR-Bold.otf');
+}
+@font-face {
+  font-family: 'NotoSansKR-Light';
+  src: url('./fonts/NotoSansKR-Light.otf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
