--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: 'NotoSansKR-Regular';
-  src: url('./fonts/NotoSansKR-Regular.otf');
+  font-family: "NotoSansKR-Regular";
+  src: url("./fonts/NotoSansKR-Regular.otf");
 }
 @font-face {
-  font-family: 'NotoSansKR-Medium';
-  src: url('./fonts/NotoSansKR-Medium.otf');
+  font-family: "NotoSansKR-Medium";
+  src: url("./fonts/NotoSansKR-Medium.otf");
 }
 @font-face {
-  font-family: 'NotoSansKR-Bold';
-  src: url('./fonts/NotoSansKR-Bold.otf');
+  font-family: "NotoSansKR-Bold";
+  src: url("./fonts/NotoSansKR-Bold.otf");
 }
 @font-face {
-  font-family: 'NotoSansKR-Light';
-  src: url('./fonts/NotoSansKR-Light.otf');
+  font-family: "NotoSansKR-Light";
+  src: url("./fonts/NotoSansKR-Light.otf");
 }
 
 body {
