--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,16 @@
   src: url("./fonts/NotoSansKR-Light.otf");
 }
 
+/*  나눔스퀘어 폰트 */
+@font-face {
+  font-family: "NanumSquareR";
+  src: url("./fonts/Nanumsquare/NanumSquare_acR.ttf");
+}
+@font-face {
+  font-family: "NanumSquareEB";
+  src: url("./fonts/Nanumsquare/NanumSquare_acEB.ttf");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
