04/23 feat: 대시보드 -CCTV 연동 및 굴진율, cctv 패널 퍼블리싱

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,14 @@
   font-family: "NanumSquareEB";
   src: url("./fonts/Nanumsquare/NanumSquare_acEB.ttf");
 }
+@font-face {
+  font-family: "NanumSquareB";
+  src: url("./fonts/Nanumsquare/NanumSquare_acB.ttf");
+}
+@font-face {
+  font-family: "NanumSquareL";
+  src: url("./fonts/Nanumsquare/NanumSquare_acL.ttf");
+}
 
 body {
   margin: 0;
