--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,13 @@
   src: url("./fonts/Nanumsquare/NanumSquare_acL.ttf");
 }
 
+/*  DS-digital 폰트 */
+@font-face {
+  font-family: "DS-Digital";
+  src: url("./fonts/DS-digital/DS-DIGI.TTF");
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
