--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,13 @@
     transform: rotate(360deg);
   }
 }
+@keyframes blink{
+  0%{opacity: 0;}
+  50%{opacity: .5;}
+  100%{opacity: 1;}
+}
+
+.backgroud-modal{
+  animation:blink 1s ease-in-out infinite alternate;  
+  
+}
