0524 fix: 대시보드 피드백 수정

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@
   animation:blink 1s ease-in-out infinite alternate;  
   
 }
+
+.worker-count-box,
+.vehicle-count-box {
+  animation:blink 0.5s ease-in-out infinite alternate;  
+}
