--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,12 @@
   src: url("./fonts/DS-digital/DS-DIGI.TTF");
 }
 
+/* RobotoMono 폰트(비콘) */
+@font-face {
+  font-family: "RobotoMono-Medium";
+  src: url("./fonts/RobotoMono-Medium.ttf");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
